# snd

./: .gitignore  AUDIT.md  CMakeLists.txt  DESIGN.md  LICENCE  PROGRAMMING-GUIDE.md  README.md  ROADMAP.md  UI_PROGRAMMING_GUIDE.md  imgui.ini  main.cpp
.claude/: launch.json
cmake/: SndPlugin.cmake
docs/: custom-painter-proposal.md  declarative-ui-style-proposal.md  gooey-render-surface-brief.md  graph-surface-ui-brief.md  menu-primitives-ui-brief.md  retained-ui-accessibility-draft.md  ui-primitive-parity-project.md
examples/snd-example/: main.cpp
include/snd/: audio.h  control.h  dsp.h  event_buffer.h  icons.h  midi.h  platform.h  plugin_client.h  plugin_client_ui.h  plugin_graph.h  plugin_host.h  plugin_hosted.h  state.h  ui.h  ui_draw.h  ui_draw_recording.h  ui_paint.h  ui_retained.h  ui_retained_gl.h  ui_retained_matrix.h  ui_retained_widgets.h  ui_types.h
site/: index.html
src/: audio.cpp  audio_media_mac.mm  dsp.cpp  midi.cpp  platform.cpp  plugin_graph.cpp  plugin_host.cpp  plugin_hosted.cpp  state.cpp  svg.cpp  ui.cpp  ui_draw_gl.cpp  ui_draw_gl.h  ui_draw_imgui.cpp  ui_draw_imgui.h  ui_draw_recording.cpp  ui_font_atlas_stb.cpp  ui_font_atlas_stb.h  ui_fonts.cpp  ui_glfw_shared.cpp  ui_glfw_shared.h  ui_mac.mm  ui_paint.cpp  ui_palette.cpp  ui_retained.cpp  ui_retained_gl.cpp  ui_retained_matrix.cpp  ui_retained_widgets.cpp  ui_widgets.cpp
src/fonts/: lucide.inc  material.inc
src/plugin_client/: editor_view_mac.mm  editor_view_win.cpp  editor_view_x11.cpp  standalone_main.cpp  vst3_wrapper.cpp
src/plugin_host/: editor_window.h  editor_window_mac.mm  editor_window_win.cpp  editor_window_x11.cpp
src/plugin_host/au/: au_format.mm
src/plugin_host/vst3/: vst3_format.cpp  vst3_format.h
test/plugins/demofilter/: demofilter.cpp
test/plugins/demosynth/: demosynth.cpp
test/plugins/testgain/: testgain.cpp
tools/: build.sh
tools/retained-linkcheck/: main.cpp
tools/widget-shots/: encode.py  main.cpp  render.sh
